# CPP-TASKS

./: .gitignore  .gitmodules  readme.md
TASK1/: CMakeLists.txt
TASK1/include/: mymath.h
TASK1/src/: main.cpp  mymath.cpp
TASK2/: CMakeLists.txt
TASK2/src/: main.cpp
TASK3/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake
TASK3/include/: print.h
TASK3/src/: main.cpp  print.cpp
